--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body { font-family:  "Hiragino Kaku Gothic Pro", Meiryo, Osaka, "MS PGothic", sa
 
 img { width: 100%; }
 
-.body-wrapper { overflow: hidden; }
+.body_wrap { overflow: visible; }
 
 /*global*/
 
@@ -221,12 +221,72 @@ navbar {
 	background: linear-gradient(transparent 60%, #ffa500 0%);
 }
 
+/*circle*/
+
+/**--注１. 
+	.circle {
+		position: relative; 
+	}
+
+	.circle::before {
+		display: none; 
+		position: absolute;
+		content: 'ABOUT';
+		color: #fff;
+		font-size: .95rem;
+		line-height: 80px;
+		font-weight: 400;
+		z-index: 30;
+		top: -37px;
+		left: 46.3%;
+	}
+
+	.circle::after {
+		display: none; 
+		position: absolute;
+		content: '';
+		top: -35px;
+		left: 45%;
+		padding: 2.8%;
+		background-color: rgb(236, 185, 77);
+		border-radius: 50%;
+		z-index: 0;
+	}
+		
+--**/
+
+/*about*/
+
+.about .wrapper {
+	padding: 8% 2% 3% 2%; 
+	max-width: 1640px; 
+	max-height: 810px; 
+}
+
+.flex_box {
+	border: 2px rgb(235,185,77) solid; 
+	border-radius: 5px; 
+}
+
+.flex_title br { display: none; }
+
+.flex_item .item1 img, 
+.flex_item .item3 img, 
+.flex_item .item4 img {
+	width: 3.2rem; 
+}
+
+.flex_item .item2 img { width: 4.5rem; }
+
+.flex_item .item5 img { width: 8rem; }
 
 
-/**conceptの「」うまく動かせない**/
-/**headerのnav_item（logoとp）が完璧に横並びにならない**/
+/**注１.@media(min-height: 720px) and (max-height: 824px) の、
+circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displayのcircleが編集不可能**/
+/**注2. conceptの「」うまく動かせない**/
+/**注３. headerのnav_item（logoとp）が完璧に横並びにならない**/
 
-/*ipad pro*/
+/*etc----------------------*/
 @media (max-width: 1050px) {
 	/*global*/
 
@@ -327,11 +387,15 @@ navbar {
 		font-size: 16px; 
 		line-height: 26px; 
 	}
+	
+	/*about*/
+	
+	.flex_title br { display: inline; }
 
 	
 }
 
-/*iphone*/
+/*iphone 5s etc---------------*/
 @media (max-width: 786px) {
 	/*global*/
 
@@ -446,20 +510,83 @@ navbar {
 		line-height: 24px; 
 	}
 	
+	/*circle*/
+	
+	.circle {
+		position: relative; 
+	}
+	
+	.circle::before {
+		display: inline-block; 
+		position: absolute;
+		content: 'ABOUT';
+		color: #fff;
+		font-size: .8rem;
+		line-height: 80px;
+		font-weight: 400;
+		z-index: 30;
+		top: -39px;
+		left: 44%;
+	}
+
+	.circle::after {
+		position: absolute;
+		content: '';
+		display: inline-block; 
+		top: -25px;
+		left: 43%;
+		padding: 8%;
+		background-color: rgb(236, 185, 77);
+		border-radius: 50%;
+		z-index: 0;
+	}
+	
 }
 
 
 
-/*iPhoneX. iPhone6Plus. Pixel2 XL*/
-@media(min-height: 730px) and (max-height: 824px) {
+/*iPhoneX. iPhone6Plus. Pixel2 XL----------------*/
+@media(min-height: 720px) and (max-height: 824px) {
 	/*concepr*/
 	#concept {
 		height: auto; 
 		min-height: 86vh; 
 	}
+	
+	/*circle*/
+	
+	.circle::before {
+		display: none; 
+		position: absolute;
+		content: 'ABOUT';
+		color: #fff;
+		line-height: 80px;
+		font-weight: 400;
+		z-index: 30;
+		font-size: .9rem;
+		top: -39px;
+		left: 44%;
+	}
+
+	.circle::after {
+		display: none; 
+		position: absolute;
+		content: '';
+		top: -30px;
+		left: 43%;
+		padding: 7%;
+		background-color: rgb(236, 185, 77);
+		border-radius: 50%;
+		z-index: 0;
+	}
+	
+	.circle {
+		position: relative; 
+	}
 }
 
-/*iPad iPadPro*/
+
+/*iPad iPadPro-----------------------------------*/
 @media(min-height: 1022px) and (max-height: 1368px) {
 	
 	/*header*/
@@ -519,7 +646,65 @@ navbar {
 	.sub_title br { display: none; }
 	
 	.brsp { display: none; }
+	
+	/*circle*/
+	
+	.circle::before {
+		display: inline-block; 
+		position: absolute;
+		content: 'ABOUT';
+		color: #fff;
+		line-height: 80px;
+		font-weight: 400;
+		z-index: 30;
+		font-size: .9rem;
+		top: -39px;
+		left: 47%;
+	}
+
+	.circle::after {
+		position: absolute;
+		content: '';
+		display: inline-block; 
+		top: -35px;
+		left: 46%;
+		padding: 4.3%;
+		background-color: rgb(236, 185, 77);
+		border-radius: 50%;
+		z-index: 0;
+	}
+	
+	.circle {
+		position: relative; 
+	}
+}
+
+/*Surface Duo-------------------------------------------*/
+@media(min-width: 500px) and (max-device-width: 540px) {
+	/*concepr*/
+	#concept {
+		height: auto; 
+		min-height: 90vh; 
+	}
+	
+	/*circle*/
+	
+	.circle::before {
+		display: inline-block; 
+		font-size: .9rem;
+		top: -39px;
+		left: 44%;
+	}
+
+	.circle::after {
+		display: inline-block; 
+		top: -30px;
+		left: 43%;
+		padding: 5.8%;
+	}
 
 }
+
+
 
 
