--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ navbar {
 
 .about .wrapper {
 	background-color: rgb(254,245,224); 
-	padding: 8% 2%; 
+	padding: 8% 2% 5% 2%; 
 }
 
 .about_item { 
@@ -353,6 +353,77 @@ navbar {
 .about .flex_item .item2 img { width: 4.5rem; }
 
 .about .flex_item .item5 img { width: 8rem; }
+
+/*about2*/
+
+.about2 .wrapper { 
+	padding-top: 4%; 
+	padding-bottom: 3%; 
+	margin: 0 auto; 
+	text-align: center; 
+	color: #fff; 
+}
+
+.about2 {
+	max-width: 1920px; 
+	max-height: 740px; 
+}
+
+.about2 space { color: rgb(235,185,77); }
+
+#about2 { 
+	background-image: url(../img/aboutsecondbg.jpg); 
+	background-repeat: no-repeat; 
+	background-size: cover; 
+	background-position: center; 
+	max-width: 1640px; 
+	max-height: 556px;
+		min-height: 399px; 
+}
+
+.about2_box {
+	font-size: 20px; 
+	font-weight: 600; 
+	line-height: 32px; 
+}
+
+.about2_box br { display: none; }
+
+.about2 .item {
+	padding-top: 2%; 
+	text-align: center; 
+	width: 374px; 
+	height: 178px; 
+	background: #fff; 
+	color: #000; 
+	font-size: 14px; 
+	font-weight: 600; 
+	line-height: 22px; 
+	border-radius: 5px; 
+	letter-spacing: .1rem; 
+}
+
+.about2 .item h6 {
+	text-align: center; 
+	margin: 0 auto 3% auto; 
+	width: 314px; 
+	height: 25px; 
+	border-radius: 5px; 
+	background-color: rgb(235,185,77); 
+	color: #fff; 
+}
+
+.about2_blue {
+	margin: 0 auto; 
+	text-align: center; 
+	height: 144px; 
+	background: rgb(1,110,169); 
+	color: #fff; 
+	font-size: 20px; 
+	font-weight: 600;
+	line-height: 32px; 
+}
+	
 
 
 /**注１.@media(min-height: 720px) and (max-height: 824px) の、
