--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ navbar {
 	background-position: center; 
 	max-width: 1640px; 
 	max-height: 556px;
-		min-height: 399px; 
+	min-height: 399px; 
 }
 
 .about2_box {
@@ -407,13 +407,14 @@ navbar {
 	text-align: center; 
 	margin: 0 auto 3% auto; 
 	width: 314px; 
-	height: 25px; 
+	height: 18px; 
 	border-radius: 5px; 
 	background-color: rgb(235,185,77); 
 	color: #fff; 
 }
 
 .about2_blue {
+	padding: 3% 0; 
 	margin: 0 auto; 
 	text-align: center; 
 	height: 144px; 
@@ -423,6 +424,8 @@ navbar {
 	font-weight: 600;
 	line-height: 32px; 
 }
+
+.about2_blue p br { display: none; }
 	
 
 
@@ -568,6 +571,42 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	.about .flex_item .item2 img { width: 4.2rem; }
 
 	.about .flex_item .item5 img { width: 7.2rem; }
+	
+	/*about2*/
+
+	.about2 {
+		max-width: 100%; 
+		max-height: 930px; 
+	}
+
+	#about2 { 
+		max-width: 100%; 
+		min-height: 810px; 
+	}
+
+	.about2_box {
+		font-size: 20px; 
+	}
+	
+	.about2 .flex_item {
+		align-items: center; 
+		flex-direction: column !important;
+		text-align: center; 
+		margin: 0 auto; 
+		justify-content: center; 
+		flex-wrap: wrap; 
+	}
+
+	.about2 .item {
+		margin: 0 auto 2%; 
+		width: 322px; 
+		height: 168px; 
+	}
+
+	.about2 .item h6 {
+		width: 262px; 
+		height: 18px; 
+	}
 
 	
 }
@@ -814,7 +853,61 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 
 	.about .flex_item .item5 img { width: 5rem; }
 
-		
+	
+	/*about2*/
+
+	.about2 {
+		max-width: 100%; 
+		max-height: 740px; 
+	}
+
+	#about2 { 
+		background-image: url(../img/aboutsecondbgsp.jpg); 
+		max-width: 100%; 
+		min-height: 630px; 
+	}
+	
+	.about2_item .sub_title {
+		font-size: 18px; 
+		line-height: 20px; 
+	}
+
+	.about2_box {
+		font-size: 13px; 
+		line-height: 21px; 
+	}
+
+	.about2_box br { display: inline-block; }
+
+	.about2 .item {
+		padding-top: 2%; 
+		padding-bottom: 3%;
+		margin-bottom: 5%; 
+		width: 96%; 
+		height: 106px; 
+		font-size: 12px; 
+		line-height: 19px; 
+	}
+
+	.about2 .item h6 {
+	    text-align: center; 
+		margin: 0 auto 3% auto; 
+		width: 80%; 
+		height: 18px; 
+		font-weight: 600; 
+	}
+
+	.about2_blue {
+		padding: 4% 0 3% 0; 
+		height: 80px; 
+		font-size: 12px; 
+		line-height: 19px; 
+	}
+
+	.about2_blue p br { display: inline; }
+	
+	.about2_blue p { margin-bottom: 0 !important; }
+	
 }
 
 
@@ -990,7 +1083,44 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	.about .flex_item .item2 img { width: 4.2rem; }
 
 	.about .flex_item .item5 img { width: 7.2rem; }
-		
+	
+	
+	/*about2*/
+
+	.about2 {
+		max-width: 100%; 
+		max-height: 930px; 
+	}
+
+	#about2 { 
+		max-width: 100%; 
+		min-height: 810px; 
+	}
+
+	.about2_box {
+		font-size: 20px; 
+	}
+	
+	.about2 .flex_item {
+		align-items: center; 
+		flex-direction: column !important;
+		text-align: center; 
+		margin: 0 auto; 
+		justify-content: center; 
+		flex-wrap: wrap; 
+	}
+
+	.about2 .item {
+		margin: 0 auto 2%; 
+		width: 322px; 
+		height: 168px; 
+	}
+
+	.about2 .item h6 {
+		width: 262px; 
+		height: 18px; 
+	}
+	
 }
 
 /*Surface Duo-------------------------------------------*/
