--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ img { width: 100%; }
 
 btn { 
 	border-radius: 100vh; 
-	background-color: rgb(218,107,100); 
+	background-color: #DA6B64; 
 }
 
 btn:hover {
@@ -544,7 +544,8 @@ navbar {
 /**注１.@media(min-height: 720px) and (max-height: 824px) の、
 circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displayのcircleが編集不可能**/
 /**注2. headerのnav_item（logoとp）が完璧に横並びにならない**/
-/**注３.　merit_box p のみをmedium時に全体に広げたいが、分からない**/
+/**注３. ボタンの色実際にひらいたらヤバい、形もちがう（Devでは良いのに）**/
+/**注４. learn_box のimgが（Devでは良いのに）、携帯でみたらヤバい**/
 
 /*etc----------------------*/
 @media (max-width: 1050px) {
@@ -771,6 +772,7 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	}
 
 	.header btn::before {
+		border-radius: 0 !important; 
 		position: absolute; 
 		content: "資料請求";
 		font-weight: 400; 
@@ -782,6 +784,7 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	}
 	
 	.header btn::after {
+		border-radius: 0 !important; 
 		position: absolute; 
 		content: '';
 		background: url(../img/form.png);
