--- a/css/style.css
+++ b/css/style.css
@@ -463,7 +463,8 @@ navbar {
 
 .merit { background-color: #FEF5E0 } 
 
-.merit .flex_item {
+.merit .flex_item,
+.member .flex_item {
 	display: flex; 
 	flex-direction: row; 
 	justify-content: center; 
@@ -539,6 +540,55 @@ navbar {
 	line-height: 22px; 
 }
 
+/*member*/
+
+.member .wrapper { 
+	padding-top: 4%; 
+	padding-bottom: 2%; 
+	margin: 0 auto; 
+	text-align: center; 
+	color: #fff; 
+}
+
+#member { 
+	background-image: url('../img/teacherbg.jpg'); 
+	background-repeat: no-repeat; 
+	background-size: cover; 
+	background-position: center; 
+	background-attachment: fixed; 
+}
+
+.member .sub_title　h2 {
+	font-size: 28px; 
+	font-weight: 600 !important; 
+	line-height: 40px; 
+}
+
+.member .sub_title p {
+	font-size: 16px; 
+	font-weight: 600; 
+	line-height: 26px; 
+}
+
+.member .item img { 
+	position: relative; 
+	bottom: -30px; 
+	z-index: 20;
+}
+
+.member .inside {
+	border: 3px #fff solid; 
+	z-index: 0; 
+}
+
+.member .flex_item p {
+	box-sizing: border-box; 
+	font-size: 16px; 
+	font-weight: 300; 
+	line-height: 26px; 
+	letter-spacing: .1rem; 
+}
+
 
 
 /**注１.@media(min-height: 720px) and (max-height: 824px) の、
@@ -546,6 +596,7 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 /**注2. headerのnav_item（logoとp）が完璧に横並びにならない**/
 /**注３. ボタンの色実際にひらいたらヤバい、形もちがう（Devでは良いのに）**/
 /**注４. learn_box のimgが（Devでは良いのに）、携帯でみたらヤバい**/
+/**注５. OGPが上手く機能していない**/
 
 /*etc----------------------*/
 @media (max-width: 1050px) {
@@ -730,6 +781,31 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 		justify-content: center; 
 		align-items: start; 
 	}
+	
+	/*member*/
+	
+	.member .flex_item {
+		flex-direction: column; 
+		justify-content: center; 
+		align-items: center; 
+	}
+
+	.member .sub_title　h2 {
+		font-size: 24px; 
+		font-weight: 600 !important; 
+	}
+
+	.member .sub_title p {
+		font-size: 14px; 
+		font-weight: 600 !important; 
+		line-height: 22px; 
+	}
+
+	.member .flex_item p {
+		font-size: 14px; 
+		line-height: 22px; 
+	}
+
 
 	
 }
@@ -1066,7 +1142,8 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	
 	/*merit*/
 
-	.merit .flex_item {
+	.merit .flex_item,
+	.member .flex_item {
 		flex-direction: column; 
 		justify-content: center; 
 		align-items: center; 
@@ -1122,7 +1199,29 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	.merit_box br { display: inline-block; }
 	
 	.merit_text br { display: inline-block; }
+	
+		
+	/*member*/
+	
+	.member .flex_item {
+		flex-direction: column; 
+		justify-content: center; 
+		align-items: center; 
+	}
 
+	.member .sub_title　h2 {
+		font-size: 18px; 
+	}
+
+	.member .sub_title p {
+		font-size: 12px; 
+		line-height: 19px; 
+	}
+
+	.member .flex_item p {
+		font-size: 13px; 
+		line-height: 19px; 
+	}
 
 	
 }
