--- a/css/style.css
+++ b/css/style.css
@@ -606,6 +606,122 @@ navbar {
 	letter-spacing: .1rem; 
 }
 
+/*opinion*/
+
+.opinion_title { 
+	position: relative; 
+	text-align: center; 
+	background: #EBB94D; 
+	color: #fff;
+	font-size: 28px; 
+	font-weight: 600; 
+	line-height: 40px; 
+}
+
+.opinion_title .sub_title::before {
+	position: absolute; 
+	content: '';
+	box-sizing: border-box; 
+	top: 0; 
+	left: 0; 
+	width: 50px; 
+	height: 50px; 
+	border-top: 4px solid #fff;
+    border-left: 4px solid #fff;
+}
+
+.opinion_title .sub_title::after {
+	position: absolute; 
+	content: '';
+	box-sizing: border-box; 
+	bottom: 0; 
+	right: 0; 
+	width: 50px; 
+	height: 50px; 
+	border-bottom: 4px solid #fff;
+    border-right: 4px solid #fff;
+}
+
+.opinion_title .qanda {
+	display: inline-block; 
+	text-align: center;
+    margin: 1% auto;
+    color: #EBB94D;
+    width: 80px;
+    min-height: 80px;
+    background: #fff;
+    border-radius: 50%;
+}
+
+.opinion_title .qanda p {
+	margin: 0 auto; 
+	font-size: 14px; 
+	font-weight: 400; 
+	line-height: 80px; 
+}
+
+.opinion_title::after {
+	position: absolute; 
+	content:''; 
+	top: 100%; 
+	left: 50%; 
+	border-top: 25px solid #EBB94D;
+	border-right: 25px solid transparent;
+	border-left: 25px solid transparent;
+	margin-left: -25px; 
+}
+
+.opinion_box .sub_title h2 {
+	color: #333; 
+	font-size: 28px; 
+	font-weight: 600; 
+	line-height: 45px; 
+}
+
+.opinion_box .sub_title p {
+	color: #333; 
+	font-size: 16px; 
+	font-weight: 600; 
+	line-height: 26px; 
+}
+
+.opinion_box .sub_title small {
+	color: #333; 
+	font-size: 14px; 
+	font-weight: 300; 
+	line-height: 22px; 
+}
+
+.opinion .flex_item {
+		flex-direction: column; 
+		justify-content: center; 
+		align-items: center; 
+}
+
+.opinion .inside { padding: 0 4%; }
+
+.opinion .inside .text-left p {
+	color: #777; 
+	font-size: 18px; 
+	font-weight: 400; 
+	line-height: 29px; 
+}
+
+.opinion .inside .name p {
+	color: #777; 
+	text-decoration: underline; 
+	font-style: italic;
+	font-size: 15px; 
+	font-weight: 400; 
+	line-height: 24px; 
+}
+
+.opinion img { border: 3px #EBB94D solid; vertical-align:bottom;}
+
+
+	
+
+
 
 
 /**注１.@media(min-height: 720px) and (max-height: 824px) の、
@@ -614,6 +730,7 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 /**注３. ボタンの色実際にひらいたらヤバい、形もちがう（Devでは良いのに）**/
 /**注４. learn_box のimgが（Devでは良いのに）、携帯でみたらヤバい**/
 /**注５. OGPが上手く機能していない**/
+/**注6. .opinion .flex_itemがなぜ、余白なしにセンター並びできたか、理解していない。写した**/
 
 /*etc----------------------*/
 @media (max-width: 1050px) {
@@ -822,6 +939,51 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 		font-size: 14px; 
 		line-height: 22px; 
 	}
+
+	/*opinion*/
+
+	.opinion_title h2 { 
+		font-size: 20px; 
+		font-weight: 600; 
+		line-height: 38px; 
+	}
+
+	.opinion_title .qanda {
+		width: 80px;
+		min-height: 80px;
+	}
+
+	.opinion_title .qanda p {
+		font-size: 18px; 
+	}
+
+	.opinion_box .sub_title h2 {
+		font-size: 24px; 
+		line-height: 38px; 
+	}
+
+	.opinion_box .sub_title p {
+		font-size: 14px; 
+	}
+
+	.opinion_box .sub_title small {
+		font-size: 12px; 
+		line-height: 19px; 
+	}
+	
+	.opinion .inside .text-left p {
+		font-size: 18px; 
+		font-weight: 400; 
+		line-height: 29px; 
+	}
+
+	.opinion .inside .name p {
+		font-size: 15px; 
+		font-weight: 400; 
+		line-height: 24px; 
+	}
+	
+	.opinion .inside { padding: 0; }
 
 
 	
@@ -1239,6 +1401,63 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 		font-size: 13px; 
 		line-height: 19px; 
 	}
+	
+	/*opinion*/
+	
+	.opinion_title .sub_title::before {
+		width: 30px; 
+		height: 30px; 
+	}
+
+	.opinion_title .sub_title::after {
+		width: 30px; 
+		height: 30px; 
+	}
+	
+	.opinion_title h2 { 
+		font-size: 14px; 
+		line-height: 40px; 
+	}
+
+	.opinion_title .qanda {
+		width: 80px;
+		min-height: 80px;
+	}
+
+	.opinion_title .qanda p {
+		font-size: 15px; 
+	}
+
+	.opinion_box .sub_title h2 {
+		font-size: 18px; 
+		line-height: 29px; 
+	}
+
+	.opinion_box .sub_title p {
+		font-size: 12px; 
+		line-height: 19px; 
+	}
+
+	.opinion_box .sub_title small {
+		font-size: 12px; 
+		line-height: 19px; 
+	}
+	
+	.opinion .inside .text-left p {
+		font-size: 15px; 
+		line-height: 29px; 
+	}
+
+	.opinion .inside .name p {
+		font-size: 13px; 
+		font-weight: 400; 
+		line-height: 24px; 
+	}
+	
+	.opinion .inside { padding: 0; }
+
+
+
 
 	
 }
@@ -1537,8 +1756,52 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	}
 	
 	.merit_text br { display: inline-block; }
+	
+	/*opinion*/
+	
+	.opinion_box .sub_title small br { display: none; }
 
-			
+	/*opinion*/
+
+	.opinion_title { 
+		font-size: 20px; 
+	}
+
+	.opinion_title .qanda {
+		width: 80px;
+		min-height: 80px;
+	}
+
+	.opinion_title .qanda p {
+		font-size: 18px; 
+	}
+
+	.opinion_box .sub_title h2 {
+		font-size: 24px; 
+		line-height: 38px; 
+	}
+
+	.opinion_box .sub_title p {
+		font-size: 14px; 
+	}
+
+	.opinion_box .sub_title small {
+		font-size: 12px; 
+		line-height: 19px; 
+	}
+	
+	.opinion .inside .text-left p {
+		font-size: 18px; 
+		font-weight: 400; 
+		line-height: 29px; 
+	}
+
+	.opinion .inside .name p {
+		font-size: 15px; 
+		font-weight: 400; 
+		line-height: 24px; 
+	}
+
 }
 
 /*Surface Duo-------------------------------------------*/
@@ -1582,6 +1845,10 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 		justify-content: center; 
 		align-items: center; 
 	}
+	
+	/*opinion*/
+	
+	.opinion_box .sub_title small br { display: inline; }
 
 }
 
