--- a/css/style.css
+++ b/css/style.css
@@ -801,12 +801,12 @@ navbar {
 /**注１.@media(min-height: 720px) and (max-height: 824px) の、
 circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displayのcircleが編集不可能**/
 /**注３. ボタンの色実際にひらいたらヤバい、形もちがう（Devでは良いのに）**/
-/**注４. learn_box のimgが（Devでは良いのに）、携帯でみたらヤバい**/
 /**注７. opinion写真3つを同じ大きさにどうしてもできない**/
 
 
 /**注５. OGPが上手く機能していない →　画像絶対パスで指定しないと表示されない**/
 /**注6. .opinion .flex_itemがなぜ、余白なしにセンター並びできたか、理解していない。写した**/
+/**注４. learn_box のimgが（Devでは良いのに）、携帯でみたらヤバい→remではなく、pxを使い、img-fluid解除**/
 
 /*etc----------------------*/
 @media (max-width: 1050px) {
@@ -1216,6 +1216,8 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 		position: relative; 
 	}
 	
+	/**
+	
 	.circle::before {
 		display: inline-block; 
 		position: absolute;
@@ -1240,6 +1242,8 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 		border-radius: 50%;
 		z-index: 0;
 	}
+	
+	**/
 	
 	/*about*/
 	
@@ -1701,6 +1705,7 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	
 	/*circle*/
 	
+	/**
 	.circle::before {
 		display: none; 
 		position: absolute;
@@ -1715,7 +1720,7 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	}
 
 	.circle::after {
-		position: none;
+		position: none　!important;
 		content: '';
 		display: inline-block; 
 		top: -35px;
@@ -1729,6 +1734,8 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	.circle {
 		position: relative; 
 	}
+	
+	**/
 	
 	/*about*/
 	
