--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ button{
 	border: 0 none !important; 
 	border-radius: 100vh; 
 	background-color: #DA6B64; 
+	-webkit-appearance: none;
 }
 
 button:hover {
