--- a/css/style.css
+++ b/css/style.css
@@ -915,7 +915,7 @@ navbar {
 
 /**注１.@media(min-height: 720px) and (max-height: 824px) の、
 circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displayのcircleが編集不可能**/
-/**注３. ボタンの色実際にひらいたらヤバい、形もちがう（Devでは良いのに）**/
+/**注３. iOSでボタンの色実際にひらいたらヤバい、形もちがう（Devでは良いのに）**/
 /**注７. opinion写真3つを同じ大きさにどうしてもできない**/
 
 
@@ -1254,6 +1254,10 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	.sub_title { 
 		font-size: 18px; 
 		line-height: 29px; 
+	}
+	
+	button{ 
+		-webkit-appearance: none !important;
 	}
 	
 	/*header*/
